[package]
name = "reflink-copy"
version = "0.3.2"
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/iterative/reflink-copy"
repository = "https://github.com/iterative/reflink-copy"
readme = "README.md"

[lib]
name = "reflink_copy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.2", features = ["abi3-py38"] }
reflink-copy = "0.1.26"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
case_sensitive_file_extension_comparisons = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
